[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mermaid-depth"
version = "0.1.0"
description = "MERMAID waveform and ocean-depth analysis utilities."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cartopy>=0.25.0",
    "herbie-data>=2026.3.0",
    "matplotlib>=3.8",
    "netcdf4>=1.7.4",
    "numpy>=1.26",
    "obspy>=1.4",
    "scipy>=1.11",
    "xarray>=2026.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]
